# WordsLearning

./: CMakeLists.txt  conanfile.txt
console_client/: CMakeLists.txt
console_client/src/: main.cpp
server/: CMakeLists.txt  conanfile.txt
server/src/: main.cpp
server/src/ConnectionHandler/: ParsedRequest.hh  Server.cpp  Server.hh  Session.cpp  Session.hh
server/src/DatabaseHandlers/: DatabaseConfig.hh  DatabaseHandler.cpp  DatabaseHandler.hh  IDatabaseHandler.hh
server/src/RequestHandler/: IRequestHandler.hh  RequestHandler.cpp  RequestHandler.hh
server/test/: ConnectionHandlerTest.cpp  DatabaseHandlerTest.cpp  RequestHandlerTest.cpp  main.cpp
server/test/lib/: ClientMock.cpp  ClientMock.hh  ClientSession.cpp  ClientSession.hh  DatabaseHandlerMock.hh  RequestHandlerEchoMock.cpp  RequestHandlerEchoMock.hh
src/: main.cpp
src/DatabaseHandlers/: DatabaseConfig.hh  DatabaseEnums.hh  DatabaseHandler.cpp  DatabaseHandler.hh  ILanguageHandler.hh
